--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,35 @@
 main {
   position: relative;
   width: 100%;
-  min-height: 92vh;
+  height: calc(100% - 84px);
   font-size: calc(10px + 2vmin);
   background-color: rgb(205, 217, 161);
   color: white;
   border-radius: 20px;
   margin-top: 4px;
+}
+.model-open{
+  overflow: hidden;
+}
+.modal-body{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(105, 101, 101, 0.6);
+  z-index: 3;
+  left: 0;
+  top: 0;
+}
+.modal-body-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto auto;
+  width: 500px;
+  height: 300px;
+  background-color:whitesmoke;
+  border-radius: 20px;
 }
